# jira-data-center-mcp-server

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  claude_desktop_config.example.json  jira_mcp_implementation_plan-v2.md  jira_mcp_implementation_plan-v3.md  jira_mcp_implementation_plan-v4.1.md  jira_mcp_implementation_plan-v4.md  jira_mcp_implementation_plan-v5.md  jira_server.py  payload_piece_01.b64  pyproject.toml  requirements.txt  vscode_mcp_profiles.example.json
.cmd/: update_settings.py
.copilot/skills/jira-mcp-setup/: SKILL.md
.github/workflows/: settings-update.yaml
payload/: runtime_bundle_02.b64  runtime_bundle_03.b64  runtime_payload_01.b64
payload_hex/: runtime_bundle_04_hex_01.txt  runtime_bundle_04_hex_02.txt
src/jira_data_center_mcp_server/: __init__.py  __main__.py  app.py  client.py  config.py  prompts.py  resources.py  server.py  tools_agile.py  tools_composite.py  tools_create.py  tools_read.py  tools_write.py
